--- a/index.html
+++ b/index.html
@@ -1,144 +1,271 @@
-<html>
-	<head>
-		<title>M&M</title>
-		<meta name="description" content="Aftellen naar de leukste datum van het jaar!" />
-		<script type="text/javascript" src="countdown.min.js"></script>
-		<link href="favicon.ico" rel="icon" type="image/x-icon" />
-		<style>
-			@import url('https://fonts.googleapis.com/css?family=Montserrat:300,700');
-			* {
-				margin: 0;
-				padding: 0;
-				font-size: 1em;
-				text-align: center;
-			}
-			html, body {
-				font-family: 'Montserrat', sans-serif;
-				color: #FFF;
-				background-color: black;
-			}
-			#photo, #countdown {
-				width: 50vw;
-			}
-			#photo {
-				height: 100%;
-				float: left;
-				background-image: url("photo.jpg");
-				background-size: cover;
-				background-position: center center;
-			}
-			#countdown {
-				float: right;
-				top: 50%;
-				position: relative;
-				transform: translateY(-50%);
-			}
-			article {
-				width: 45vw;
-				border: 1px solid #CCC;
-				margin: 0 2.5vw;
-				position: relative;
-			}
-			label {
-				top: -0.5vw;
-				position: relative;
-				background-color: black;
-				padding: 0 20px;
-				font-weight: bold;
-				text-transform: uppercase;
-			}
-			ul {
-				width: 30vw;
-				margin: 0 2.5vw;
-				padding: 0 5vw;
-				border-bottom: 1px solid #ccc;
-				padding-bottom: 2vw;
-			}
-			ul::after, article::after {
-				content: "";
-				display: table;
-				clear: both;
-			}
-			li {
-				display: inline-block;
-				list-style: none;
-				float: left;
-				width: 10vw;
-				height: 16vw;
-			}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <title>Document</title>
+    <script src="countdown.min.js"></script>
+    <link
+      href="//fonts.googleapis.com/css?family=Montserrat:400,600,800"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
 
-			h1 {
-				font-size: 12vw;
-			}
-			h2 {
-				font-size: 6vw;
-				margin-top: 3vw;
-			}
-			p {
-				font-size: 1vw;
-				line-height: 1.5vw;
-				color: #808080;
-			}
-			p font {
-				color: #FFF;
-			}
-			aside {
-				padding: 2vw 0;
-			}
-		</style>
-	</head>
-	<body>
-		<section id="photo"></section>
-		<section id="countdown">
-			<article>
-				<label>Al samen sinds</label>
-				<ul>
-					<li>
-						<h1 id="y"></h1>
-						<p>JAAR</p>
-					</li>
-					<li><h2>+</h2></li>
-					<li>
-						<h1 id="m"></h1>
-						<p>MAANDEN</p>
-					</li>
-				</ul>
-				<aside>
-					<p>
-						<font id="s"></font><br />
-						Sinds 11 december 2012
-					</p>
-				</aside>
-			</article>
-			<article style="margin-top: 3vw;">
-				<label>Tot volgend jaar</label>
-				<aside>
-					<p>
-						<font id="n"></font><br />
-					</p>
-				</aside>
-			</article>
-		</section>
-		<script>
-			function count() {
-				var y = 2012, m = 12, d = 11;
-				var since = countdown( new Date(y, d, d, 11, 11) );
-				var now = new Date();
+      html,
+      body {
+        background-color: rgb(10, 5, 15);
+        color: #fafafa;
+        font-size: 16px;
+        font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+          Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      }
 
-				if(now > new Date(now.getFullYear()+"-"+m+"-"+d)) {
-					var next = countdown( new Date((now.getFullYear()+1)+"-"+m+"-"+d) );
-				} else {
-					var next = countdown( new Date(now.getFullYear()+"-"+m+"-"+d) );
-				}
+      main {
+        padding: 0 2rem;
+        margin: 4rem auto;
+        max-width: 80rem;
+        display: grid;
+        column-gap: 2rem;
+        row-gap: 2rem;
+      }
 
-				document.getElementById("y").innerHTML = since.years;
-				document.getElementById("m").innerHTML = since.months;
-				document.getElementById("s").innerHTML = since.years+" jaar, "+since.months+" maanden, "+since.days+" dagen, "+since.hours+" uur, "+since.minutes+" minuten en "+since.seconds+" seconden";
-				document.getElementById("n").innerHTML = next.months+" maanden, "+next.days+" dagen, "+next.hours+" uur, "+next.minutes+" minuten en "+next.seconds+" seconden";
-			}
+      section {
+        background-color: darkblue;
+        display: grid;
+        align-items: end;
+        position: relative;
+        overflow: hidden;
+        background-size: cover;
+        background-position: center;
+      }
 
-			count();
-			setInterval(function(){ count(); }, 1000);
-		</script>
-	</body>
+      .full {
+        aspect-ratio: 1/1;
+        border-radius: 3rem;
+      }
+
+      .left,
+      .right {
+        aspect-ratio: 1/1;
+      }
+
+      .left {
+        border-radius: 3rem 1rem 1rem 3rem;
+      }
+
+      .right {
+        border-radius: 1rem 3rem 3rem 1rem;
+      }
+
+      .gradient {
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 100%);
+        height: 75%;
+        width: 100%;
+        position: absolute;
+        z-index: 0;
+      }
+
+      article {
+        padding: 1.5rem;
+        z-index: 1;
+      }
+
+      .chapeau {
+        font-weight: 400;
+      }
+
+      h1 {
+        font-size: 4rem;
+        font-weight: 800;
+      }
+
+      aside {
+        display: inline-block;
+        padding: 1.5rem;
+        border-radius: 2rem;
+        margin-top: 1.5rem;
+      }
+
+      aside div,
+      aside strong,
+      aside p {
+        float: left;
+      }
+
+      aside div {
+        margin-right: 1rem;
+      }
+
+      aside div:last-child {
+        margin-right: 0;
+      }
+
+      aside strong {
+        font-weight: 600;
+        margin-right: 0.375rem;
+      }
+
+      @media only screen and (min-width: 768px) {
+        main {
+          grid-template-columns: 1fr 1fr;
+        }
+
+        .full {
+          aspect-ratio: 1.5/1;
+          grid-column: 1/3;
+        }
+
+        h1 {
+          font-size: 5rem;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <section
+        id="relationship"
+        style="background-image: url('./img/love.jpg')"
+        class="full"
+      >
+        <article>
+          <p class="chapeau">11 december 2011</p>
+          <h1>Samen</h1>
+
+          <aside style="background-color: #3d6d75">
+            <div class="year">
+              <strong>00</strong>
+              <p>jaar</p>
+            </div>
+            <div class="month">
+              <strong>00</strong>
+              <p>maanden</p>
+            </div>
+            <div class="day">
+              <strong>00</strong>
+              <p>dagen</p>
+            </div>
+          </aside>
+        </article>
+        <div class="gradient"></div>
+      </section>
+
+      <section
+        id="flip"
+        style="background-image: url('./img/flip.jpeg')"
+        class="left"
+      >
+        <article>
+          <p class="chapeau">31 mei 2015</p>
+          <h1>Flip</h1>
+
+          <aside style="background-color: #c67c03">
+            <div class="year">
+              <strong>00</strong>
+              <p>jaar</p>
+            </div>
+            <div class="month">
+              <strong>00</strong>
+              <p>maanden</p>
+            </div>
+            <div class="day">
+              <strong>00</strong>
+              <p>dagen</p>
+            </div>
+          </aside>
+        </article>
+        <div class="gradient"></div>
+      </section>
+
+      <section
+        id="house"
+        style="background-image: url('./img/house.jpg')"
+        class="right"
+      >
+        <article>
+          <p class="chapeau">18 december 2018</p>
+          <h1>Huis</h1>
+
+          <aside style="background-color: #b8896d">
+            <div class="year">
+              <strong>00</strong>
+              <p>jaar</p>
+            </div>
+            <div class="month">
+              <strong>00</strong>
+              <p>maanden</p>
+            </div>
+            <div class="day">
+              <strong>00</strong>
+              <p>dagen</p>
+            </div>
+          </aside>
+        </article>
+        <div class="gradient"></div>
+      </section>
+
+      <section
+        id="gwen"
+        style="background-image: url('./img/gwen.jpg')"
+        class="left"
+      >
+        <article>
+          <p class="chapeau">6 juni 2020</p>
+          <h1>Guinevere</h1>
+
+          <aside style="background-color: #525134">
+            <div class="year">
+              <strong>00</strong>
+              <p>jaar</p>
+            </div>
+            <div class="month">
+              <strong>00</strong>
+              <p>maanden</p>
+            </div>
+            <div class="day">
+              <strong>00</strong>
+              <p>dagen</p>
+            </div>
+          </aside>
+        </article>
+        <div class="gradient"></div>
+      </section>
+
+      <section
+        id="mo"
+        style="background-image: url('./img/mo.jpg')"
+        class="right"
+      >
+        <article>
+          <p class="chapeau">15 juli 2020</p>
+          <h1>Morgana</h1>
+
+          <aside style="background-color: #a36630">
+            <div class="year">
+              <strong>00</strong>
+              <p>jaar</p>
+            </div>
+            <div class="month">
+              <strong>00</strong>
+              <p>maanden</p>
+            </div>
+            <div class="day">
+              <strong>00</strong>
+              <p>dagen</p>
+            </div>
+          </aside>
+        </article>
+        <div class="gradient"></div>
+      </section>
+    </main>
+  </body>
+  <script src="main.js"></script>
 </html>
